plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.exam'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'


def javaProjects = [
        project(":sharedtypes"),
        project(":client"),
        project(":server")
]

repositories {
    mavenCentral()
}

configure(javaProjects) {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'


    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom 'org.apache.logging.log4j:log4j-bom:2.17.2'
        }
    }
    dependencies {
        implementation group: 'com.opencsv', name: 'opencsv', version: '5.6'

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-devtools'

        // https://mvnrepository.com/artifact/com.google.code.gson/gson
        implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'


        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
//    implementation  group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
